--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.NewsAPICase"
         tools:targetApi="31" >
         <activity
+            android:name=".presentation.detail.NewsDetailActivity"
+            android:exported="false" />
+        <activity
             android:name=".presentation.main.MainActivity"
             android:exported="true" >
             <intent-filter>
